--- a/manifests/l/LibreOffice/LibreOfficeHelpPack/7.2.2.2/LibreOffice.LibreOfficeHelpPack.installer.yaml
+++ b/manifests/l/LibreOffice/LibreOfficeHelpPack/7.2.2.2/LibreOffice.LibreOfficeHelpPack.installer.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
-PackageIdentifier: LibreOffice.LibreOfficeHelpPack
+PackageIdentifier: LibreOffice.LibreOffice.HelpPack
 PackageVersion: 7.2.2.2
 Platform:
 - Windows.Desktop
