--- a/manifests/l/LibreOffice/LibreOffice/HelpPack/7.2.2.2/LibreOffice.LibreOffice.HelpPack.locale.en-US.yaml
+++ b/manifests/l/LibreOffice/LibreOffice/HelpPack/7.2.2.2/LibreOffice.LibreOffice.HelpPack.locale.en-US.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
-PackageIdentifier: LibreOffice.LibreOfficeHelpPack
+PackageIdentifier: LibreOffice.LibreOffice.HelpPack
 PackageVersion: 7.2.2.2
 PackageLocale: en-US
 Publisher: The Document Foundation
