--- a/manifests/u/UMEZAWATakeshi/UtvideoCodecSuite/23.0.0/UMEZAWATakeshi.UtvideoCodecSuite.locale.en-US.yaml
+++ b/manifests/u/UMEZAWATakeshi/UtvideoCodecSuite/23.0.0/UMEZAWATakeshi.UtvideoCodecSuite.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: UMEZAWATakeshi.UtvideoCodecSuite
-PackageVersion: utvideo-23.0.0
+PackageVersion: 23.0.0
 PackageLocale: en-US
 Publisher: UMEZAWA Takeshi
 PublisherUrl: http://umezawa.dyndns.info/wordpress/
