--- a/manifests/u/UMEZAWATakeshi/UtvideoCodecSuite/23.0.0/UMEZAWATakeshi.UtvideoCodecSuite.yaml
+++ b/manifests/u/UMEZAWATakeshi/UtvideoCodecSuite/23.0.0/UMEZAWATakeshi.UtvideoCodecSuite.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: UMEZAWATakeshi.UtvideoCodecSuite
-PackageVersion: utvideo-23.0.0
+PackageVersion: 23.0.0
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
