--- a/manifests/u/UMEZAWATakeshi/UtvideoCodecSuite/23.0.0/UMEZAWATakeshi.UtvideoCodecSuite.locale.en-US.yaml
+++ b/manifests/u/UMEZAWATakeshi/UtvideoCodecSuite/23.0.0/UMEZAWATakeshi.UtvideoCodecSuite.locale.en-US.yaml
@@ -13,10 +13,10 @@ PackageName: Ut Video Codec Suite
 PackageUrl: https://github.com/umezawatakeshi/utvideo
 License: GNU General Public License v2.0
 LicenseUrl: https://raw.githubusercontent.com/umezawatakeshi/utvideo/master/LICENSE
-# Copyright: 
+Copyright: Copyright © 2008-2021 UMEZAWA Takeshi
 CopyrightUrl: https://raw.githubusercontent.com/umezawatakeshi/utvideo/master/LICENSE
 ShortDescription: Ut Video Codec Suite is a fast lossless video codec which supports multiple codec interfaces.
-# Description: 
+Description: Ut Video Codec Suite is a multi-interface lossless video codec and includes several codecs using different internal process and internal format.
 Moniker: utvideo
 Tags:
 - video-codec
