--- a/manifests/c/CNRISTI/MeshLab/2021.10/CNRISTI.MeshLab.locale.en-US.yaml
+++ b/manifests/c/CNRISTI/MeshLab/2021.10/CNRISTI.MeshLab.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: CNRISTI.MeshLab
-PackageVersion: Meshlab-2021.10
+PackageVersion: 2021.10
 PackageLocale: en-US
 Publisher: Paolo Cignoni - VCG - ISTI - CNR
 PublisherUrl: https://www.meshlab.net
