--- a/manifests/c/CNRISTI/MeshLab/2021.10/CNRISTI.MeshLab.yaml
+++ b/manifests/c/CNRISTI/MeshLab/2021.10/CNRISTI.MeshLab.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: CNRISTI.MeshLab
-PackageVersion: Meshlab-2021.10
+PackageVersion: 2021.10
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
