--- a/manifests/k/Kitware/CMake/3.22.0-rc2/Kitware.CMake.installer.yaml
+++ b/manifests/k/Kitware/CMake/3.22.0-rc2/Kitware.CMake.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Kitware.CMake
-PackageVersion: 3.22.0-rc2
+PackageVersion: 3.22.0
 InstallerLocale: en-US
 MinimumOSVersion: 10.0.0.0
 InstallerType: msi
