--- a/manifests/x/XMind/8/3.7.9.201912052356/XMind.8.locale.zh-CN.yaml
+++ b/manifests/x/XMind/8/3.7.9.201912052356/XMind.8.locale.zh-CN.yaml
@@ -1,7 +1,7 @@
 # Created using YamlCreate.ps1 v1.1.7
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.0.0.schema.json
 
-PackageIdentifier: XMind.XMind.8
+PackageIdentifier: XMind.8
 PackageVersion: 3.7.9.201912052356
 PackageLocale: zh-CN
 Publisher: XMind Ltd.
