--- a/manifests/q/QuintonReeves/RedEclipse/2.0.0/QuintonReeves.RedEclipse.locale.en-US.yaml
+++ b/manifests/q/QuintonReeves/RedEclipse/2.0.0/QuintonReeves.RedEclipse.locale.en-US.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: QuintonReeves.RedEclipse
 PackageVersion: 2.0.0
 PackageLocale: en-US
-Publisher: Quinton Reeves, Lee Salzman
+Publisher: Red Eclipse Team
 PublisherUrl: https://www.redeclipse.net/
 PackageName: Red Eclipse
 PackageUrl: https://www.redeclipse.net/
