--- a/manifests/x/XMind/2020/10.2.1/XMind.2020.locale.en-US.yaml
+++ b/manifests/x/XMind/2020/10.2.1/XMind.2020.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 10.2.1
 PackageLocale: en-US
 Publisher: XMind Ltd.
 PublisherUrl: https://www.xmind.net
-PublisherSupportUrl: https://support.xmind.net/hc/en-us
+#PublisherSupportUrl: https://support.xmind.net/hc/en-us
 PrivacyUrl: https://www.xmind.net/privacy/
 Author: XMind Ltd.
 PackageName: XMind
