--- a/manifests/x/XMind/2020/10.2.1/XMind.2020.locale.zh-CN.yaml
+++ b/manifests/x/XMind/2020/10.2.1/XMind.2020.locale.zh-CN.yaml
@@ -6,7 +6,7 @@ PackageVersion: 10.2.1
 PackageLocale: zh-CN
 Publisher: XMind Ltd.
 PublisherUrl: https://www.xmind.cn
-PublisherSupportUrl: https://support.xmind.net/hc/zh-cn
+#PublisherSupportUrl: https://support.xmind.net/hc/zh-cn
 PrivacyUrl: https://www.xmind.cn/privacy/
 Author: 深圳市爱思软件技术有限公司
 PackageName: XMind
