--- a/manifests/m/Microsoft/WindowsPCHealthCheck/3.1.210929003/Microsoft.WindowsPCHealthCheck.installer.yaml
+++ b/manifests/m/Microsoft/WindowsPCHealthCheck/3.1.210929003/Microsoft.WindowsPCHealthCheck.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.WindowsPCHealthCheck
-PackageVersion: 3.1.210929003
+PackageVersion: 3.1.2109.29003
 Installers:
 - InstallerLocale: en-US
   Architecture: x64
