--- a/manifests/m/Microsoft/WindowsPCHealthCheck/3.1.210929003/Microsoft.WindowsPCHealthCheck.installer.yaml
+++ b/manifests/m/Microsoft/WindowsPCHealthCheck/3.1.210929003/Microsoft.WindowsPCHealthCheck.installer.yaml
@@ -8,7 +8,7 @@ Installers:
   Architecture: x64
   InstallerType: msi
   Scope: machine
-  InstallerUrl: https://aka.ms/GetPCHealthCheckApp
+  InstallerUrl: https://download.microsoft.com/download/5/b/4/5b4103b3-3135-4958-987d-3aba103333f6/3.1/X64/WindowsPCHealthCheckSetup.msi
   InstallerSha256: 66D2C0F590DD903BAA029FC9BCCB609AB210DBA846A5A915481DDA88D7F50451
   ProductCode: '{77ACFAF7-E5AB-410D-BA14-BBEBF89422DE}'
 ManifestType: installer
