--- a/manifests/m/Microsoft/WindowsPCHealthCheck/3.1.210929003/Microsoft.WindowsPCHealthCheck.yaml
+++ b/manifests/m/Microsoft/WindowsPCHealthCheck/3.1.210929003/Microsoft.WindowsPCHealthCheck.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.WindowsPCHealthCheck
-PackageVersion: 3.1.210929003
+PackageVersion: 3.1.2109.29003
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
