--- a/manifests/e/EddieWang/Sia-UI/1.5.7/EddieWang.Sia-UI.locale.en-US.yaml
+++ b/manifests/e/EddieWang/Sia-UI/1.5.7/EddieWang.Sia-UI.locale.en-US.yaml
@@ -17,7 +17,7 @@ Tags:
 - cloud
 - storage
 - decentralized
-- Open Source
+- open-source
 - blockchain
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
