--- a/manifests/p/PhilipGerke/Odassey/2.1.0/PhilipGerke.Odassey.locale.en-US.yaml
+++ b/manifests/p/PhilipGerke/Odassey/2.1.0/PhilipGerke.Odassey.locale.en-US.yaml
@@ -4,17 +4,17 @@
 PackageIdentifier: PhilipGerke.Odassey
 PackageVersion: 2.1.0
 PackageLocale: en-US
-Publisher: Ingenieurbüro Philip Gerke
+Publisher: Philip Gerke
 PublisherUrl: https://www.philipgerke.com
 PublisherSupportUrl: https://pgerke.atlassian.net/servicedesk/customer/portal/1
-# PrivacyUrl: 
+PrivacyUrl: https://privacy.philipgerke.com/
 Author: Philip Gerke
 PackageName: Odassey
 PackageUrl: http://www.odassey.de
 License: Proprietary
 LicenseUrl: https://github.com/pgerke/get-odassey/blob/main/LICENSE.md
 Copyright: Copyright (c) 2020-2021 Philip Gerke
-# CopyrightUrl: 
+# CopyrightUrl:
 ShortDescription: Conveniently explore OData v4 endpoints
 Description: Make sure your journey on the OData ocean doesn't become an odyssey with Odassey
 Moniker: odassey
