--- a/manifests/1/115/115Chrome/25.0.0.3/115.115Chrome.locale.en-US.yaml
+++ b/manifests/1/115/115Chrome/25.0.0.3/115.115Chrome.locale.en-US.yaml
@@ -16,7 +16,7 @@ LicenseUrl: https://115.com/pc_agreement.html
 Copyright: Copyright 2021 The 115Browser Authors. All rights reserved.
 CopyrightUrl: https://115.com/copyright.html
 ShortDescription: A PC client that integrates 115, 115 Organization and browser
-Description: 115 Browser is a PC client that perfectly integrates multiple platforms including 115, 115 organization and browser. It supports 115 account quick login, favorites synchronization, files backup by dragging and dropping, batch uploading and downloading, etc; supports 115 organization affairs notification, so you can keep track of the organization's collaboration; supports browser quick search and built-in utilities and extensions, giving you a high-speed, refreshing, and smooth Internet experience.
+Description: 115 Browser is a PC client that perfectly integrates multiple platforms including 115, 115 organization and browser. It supports 115 account quick login, favorites synchronization, files backup by dragging and dropping, batch uploading and downloading, etc.; supports 115 organization affairs notification, so you can keep track of the organization's collaboration; supports browser quick search and built-in utilities and extensions, giving you a high-speed, refreshing, and smooth Internet experience.
 Moniker: 115chrome
 Tags:
 - netdisk
