--- a/manifests/m/Microsoft/PowerAutomateDesktop/2.14.173.21294/Microsoft.PowerAutomateDesktop.locale.en-US.yaml
+++ b/manifests/m/Microsoft/PowerAutomateDesktop/2.14.173.21294/Microsoft.PowerAutomateDesktop.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.5-1-19041-1237
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.PowerAutomateDesktop
-PackageVersion: 2.13.163.21263
+PackageVersion: 2.14.173.21294
 PackageLocale: en-US
 Publisher: Microsoft Corporation
 PublisherUrl: https://flow.microsoft.com
