--- a/manifests/m/MicrosoftCorporation/KinectforWindowsSDKv2/0_1409/2.0.1410.19000/MicrosoftCorporation.KinectforWindowsSDKv2.0_1409.installer.yaml
+++ b/manifests/m/MicrosoftCorporation/KinectforWindowsSDKv2/0_1409/2.0.1410.19000/MicrosoftCorporation.KinectforWindowsSDKv2.0_1409.installer.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
-PackageIdentifier: MicrosoftCorporation.KinectforWindowsSDKv2.0_1409
+PackageIdentifier: MicrosoftCorporation.KinectforWindowsSDK
 PackageVersion: 2.0.1410.19000
 Installers:
 - Architecture: x86
