--- a/manifests/a/Adobe/Acrobat/Reader/64-bit/21.007.20099/Adobe.Acrobat.Reader.64-bit.locale.en-US.yaml
+++ b/manifests/a/Adobe/Acrobat/Reader/64-bit/21.007.20099/Adobe.Acrobat.Reader.64-bit.locale.en-US.yaml
@@ -1,4 +1,6 @@
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.0.0.schema.json
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.5-1-19041-1237
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
+
 PackageIdentifier: Adobe.Acrobat.Reader.64-bit
 PackageVersion: 21.007.20099
 PackageLocale: en-US
@@ -23,4 +25,3 @@ Tags:
 - dc
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
-
