--- a/manifests/a/Adobe/Acrobat/Reader/64-bit/21.007.20099/Adobe.Acrobat.Reader.64-bit.locale.en-US.yaml
+++ b/manifests/a/Adobe/Acrobat/Reader/64-bit/21.007.20099/Adobe.Acrobat.Reader.64-bit.locale.en-US.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: Adobe.Acrobat.Reader.64-bit
 PackageVersion: 21.007.20099
 PackageLocale: en-US
-Publisher: Adobe Systems Incorporated
+Publisher: Adobe
 PublisherUrl: https://www.adobe.com
 PublisherSupportUrl: https://helpx.adobe.com/support.html
 PrivacyUrl: https://www.adobe.com/privacy.html
