--- a/manifests/m/Microsoft/AzureDataCLI/20.3.6/Microsoft.AzureDataCLI.locale.en-US.yaml
+++ b/manifests/m/Microsoft/AzureDataCLI/20.3.6/Microsoft.AzureDataCLI.locale.en-US.yaml
@@ -1,4 +1,3 @@
-# Created using wingetcreate 0.3.0.3
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Microsoft.AzureDataCLI
@@ -8,6 +7,7 @@ Publisher: Microsoft Corporation
 PackageName: Azure Data CLI
 License: Copyright (C) Microsoft Corporation
 ShortDescription: A command-line utility written in Python to bootstrap and manage the data services via REST APIs
+Moniker: azurecli
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
 
