--- a/manifests/k/Kitware/CMake/3.22.0/Kitware.CMake.installer.yaml
+++ b/manifests/k/Kitware/CMake/3.22.0/Kitware.CMake.installer.yaml
@@ -17,9 +17,13 @@ Installers:
   InstallerUrl: https://github.com/Kitware/CMake/releases/download/v3.22.0-rc2/cmake-3.22.0-rc2-windows-i386.msi
   InstallerSha256: D6EA42FF00847C7C1C1BFA8952EAC84B89748491253931B27D5B45B95BAD9861
   ProductCode: '{39DCECEF-E9EB-463B-A99B-23B04E53AF8B}'
+  InstallerSwitches:
+    Custom: ALLUSERS=0 ADD_CMAKE_TO_PATH=User
 - Architecture: x64
   InstallerUrl: https://github.com/Kitware/CMake/releases/download/v3.22.0-rc2/cmake-3.22.0-rc2-windows-x86_64.msi
   InstallerSha256: D7D0DF0D4806B847F4523743F821D064F9CBBA78D93571418BA28D2595B59380
   ProductCode: '{FACF7BD6-EEDC-4B4B-97D2-FE1D83C9B7F5}'
+  InstallerSwitches:
+    Custom: ALLUSERS=0 ADD_CMAKE_TO_PATH=User
 ManifestType: installer
 ManifestVersion: 1.0.0
